compiler/lume_hir/src/lower/snapshots/lume_hir__lower__tests__function_definition_snapshots@pub_modifier.snap
---
source: compiler/lume_hir/src/lower/tests.rs
description: "pub fn main() -> void {}"
---
Map {
    package: PackageId(
        0,
    ),
    items: {
        15299231299772503292: Function(
            FunctionDefinition {
                id: 15299231299772503292,
                func_id: None,
                visibility: Public,
                name: main,
                parameters: [],
                type_parameters: [],
                return_type: Some(
                    Type {
                        name: void,
                        type_params: [],
                        location: <internal>:17:21,
                    },
                ),
                block: Some(
                    Block {
                        statements: [],
                        location: <internal>:22:24,
                    },
                ),
                location: <internal>:0:24,
            },
        ),
    },
    statements: {},
    expressions: {},
}
